--- a/templating/templates/content/disclaimer.template.html
+++ b/templating/templates/content/disclaimer.template.html
@@ -77,9 +77,8 @@
     </div>
     <div class="row center">
       <form action="session.php" method="post">
-        <button type="submit" name="disclaimerAccept" class="btn-large waves-effect waves-light green">I have read the
-          disclaimer and I
-          accept it
+        <button type="submit" name="disclaimerAccept" class="btn-large waves-effect waves-light green">I've read the
+          disclaimer accept it
         </button>
       </form>
     </div>
