added cols for buttons

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -40,13 +40,18 @@
         <b>How similar are these two objects?</b><br><br>
 
         <div class="row">
-          <button class="btn waves-effect waves-light" name="answer" value="0" type="submit">No Similarity</button>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <button class="btn waves-effect waves-light" name="answer" value="1" type="submit">Slightly Similar</button>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <button class="btn waves-effect waves-light" name="answer" value="2" type="submit">Very Similar</button>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <button class="btn waves-effect waves-light" name="answer" value="3" type="submit">Nearly Identical</button>
+          <div class="col s12 m3">
+            <button class="btn waves-effect waves-light blue" name="answer" value="0" type="submit">No Similarity</button>
+          </div>
+          <div class="col s12 m3">
+            <button class="btn waves-effect waves-light blue" name="answer" value="1" type="submit">Slightly Similar</button>
+          </div>
+          <div class="col s12 m3">
+            <button class="btn waves-effect waves-light blue" name="answer" value="2" type="submit">Very Similar</button>
+          </div>
+          <div class="col s12 m3">
+            <button class="btn waves-effect waves-light blue" name="answer" value="3" type="submit">Nearly Identical</button>
+          </div>
         </div>
       </form>
     </div>
