added block buttons

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -41,16 +41,16 @@
 
         <div class="row">
           <div class="col s12 m3">
-            <button class="btn waves-effect waves-light blue" name="answer" value="0" type="submit">No Similarity</button>
+            <button class="btn waves-effect waves-light blue btn-block" name="answer" value="0" type="submit">No Similarity</button>
           </div>
           <div class="col s12 m3">
-            <button class="btn waves-effect waves-light blue" name="answer" value="1" type="submit">Slightly Similar</button>
+            <button class="btn waves-effect waves-light blue btn-block" name="answer" value="1" type="submit">Slightly Similar</button>
           </div>
           <div class="col s12 m3">
-            <button class="btn waves-effect waves-light blue" name="answer" value="2" type="submit">Very Similar</button>
+            <button class="btn waves-effect waves-light blue btn-block" name="answer" value="2" type="submit">Very Similar</button>
           </div>
           <div class="col s12 m3">
-            <button class="btn waves-effect waves-light blue" name="answer" value="3" type="submit">Nearly Identical</button>
+            <button class="btn waves-effect waves-light blue btn-block" name="answer" value="3" type="submit">Nearly Identical</button>
           </div>
         </div>
       </form>
