--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,8 @@ main {
     font-size: 25px;
 }
 
-.fullwidth {
+.answer-button {
     width: 100%;
+    height: 1.5em;
+    padding-bottom: 20px;
 }
