--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -40,16 +40,16 @@
         <b>How similar are these two objects?</b><br><br>
 
         <div class="row">
-          <div class="col s12 m3">
+          <div class="col s12 m6 l3">
             <button class="btn waves-effect waves-light blue answer-button" name="answer" value="0" type="submit">No Similarity</button>
           </div>
-          <div class="col s12 m3">
+          <div class="col s12 m6 l3">
             <button class="btn waves-effect waves-light blue answer-button" name="answer" value="1" type="submit">Slightly Similar</button>
           </div>
-          <div class="col s12 m3">
+          <div class="col s12 m6 l3">
             <button class="btn waves-effect waves-light blue answer-button" name="answer" value="2" type="submit">Very Similar</button>
           </div>
-          <div class="col s12 m3">
+          <div class="col s12 m6 l3">
             <button class="btn waves-effect waves-light blue answer-button" name="answer" value="3" type="submit">Nearly Identical</button>
           </div>
         </div>
