put button into row

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -9,7 +9,9 @@
         align-items: baseline;
       }
     </style>
-    <a class="btn-floating btn-large waves-effect waves-light green right" style="margin-bottom: 10px;" href="#helpModal">Help</a>
+    <div class="row">
+      <a class="btn-floating btn-large waves-effect waves-light green right" style="margin-bottom: 10px;" href="#helpModal">Help</a>
+    </div>
     <div class="row valign-wrapper" style="height: 100%;">
       <div class="col m12" style="text-align: center;">
         {{FOREACH objectSource;[[value1.getVal('objData')]]}}
