--- a/templating/templates/media/image.template.html
+++ b/templating/templates/media/image.template.html
@@ -1,1 +1,1 @@
-<img class="responsive-img" style="image-rendering:pixelated; height: 40vh;width: auto; margin: 0px auto;" src="[[objectSource]]">
+<img class="responsive-img question-image" src="[[objectSource]]">
