--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ main {
 
 @media only screen and (max-width: 800px) {
     .question-image {
-        width: 100%;
-        height: auto;
+        width: 100% !important;
+        height: auto !important;
     }
 }
