--- a/templating/templates/struct/foot.template.html
+++ b/templating/templates/struct/foot.template.html
@@ -40,7 +40,7 @@
   </script>
 {{ENDIF}}
 
-{{IF [[sizeof([[DEBUG]])]] > 0}}
+{{IF [[DEBUG]]}}
   {{FOREACH entry;[[DEBUG]]}}
     <p>[[entry]]</p><br>
   {{ENDFOREACH}}
