added login selection

--- a/templating/templates/struct/menu_entries.template.html
+++ b/templating/templates/struct/menu_entries.template.html
@@ -5,6 +5,5 @@
   <li[[menu.isActive('settings')]]><a href="settings.php">Settings</a></li>
   <li[[menu.isActive('logout')]]><a href="logout.php">Logout</a></li>
 {{ELSE}}
-  <li[[menu.isActive('login')]]><a href="login.php?provider=google">Google Login</a></li>
-  <li[[menu.isActive('login')]]><a href="login.php?provider=facebook">Facebook Login</a></li>
+  <li[[menu.isActive('login')]]><a href="login_select.php">Login</a></li>
 {{ENDIF}}
