--- a/templating/templates/struct/foot.template.html
+++ b/templating/templates/struct/foot.template.html
@@ -1,4 +1,4 @@
-<footer class="page-footer blue-grey darken-2">
+<!--<footer class="page-footer blue-grey darken-2">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-</footer>
+</footer>-->
 
 {{IF [[error]] > 0}}
   <script type="text/javascript">
