--- a/templating/templates/content/login.template.html
+++ b/templating/templates/content/login.template.html
@@ -3,6 +3,7 @@
 <main>
   <div class="container">
     <div class="row">
+      <h3>Select Login Provider</h3>
       <div class="col s12 m4">
         <!-- placeholder -->
       </div>
