--- a/templating/templates/struct/menu_entries.template.html
+++ b/templating/templates/struct/menu_entries.template.html
@@ -2,7 +2,7 @@
 <li[[menu.isActive('leaderboards')]]><a href="leaderboards.php">Leaderboards</a></li>
 {{IF [[oauth.isLoggedin()]]}}
   <li[[menu.isActive('achievements')]]><a href="achievements.php">Achievements</a></li>
-  <li[[menu.isActive('settings')]]><a href="settings.php">Settings</a></li>
+  <li[[menu.isActive('settings')]]><a href="settings.php">My Account</a></li>
   <li[[menu.isActive('logout')]]><a href="logout.php">Logout</a></li>
 {{ELSE}}
   <li[[menu.isActive('login')]]><a href="login_select.php">Login</a></li>
