added code for space

--- a/templating/templates/views/prune.template.html
+++ b/templating/templates/views/prune.template.html
@@ -6,6 +6,13 @@
         align-items: baseline;
       }
     </style>
+    <script type="text/javascript">
+      document.addEventListener('keydown', function(event) {
+        if(event.keyCode === 32) {
+            alert('Space was pressed');
+        }
+      });
+    </script>
     <h3>ATTENTION: pruning session</h3>
     <div class="row valign-wrapper" style="height: 100%;">
       <div class="col m12" style="text-align: center;">
