--- a/templating/templates/views/prune.template.html
+++ b/templating/templates/views/prune.template.html
@@ -9,8 +9,7 @@
     <script type="text/javascript">
       document.addEventListener('keydown', function(event) {
         if(event.keyCode === 32) {
-            alert('Space was pressed');
-            document.getElementById('skipButton').submit();
+            document.getElementById('skipButton').click();
         }
       });
     </script>
