--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -57,7 +57,7 @@
         </div>
       </form>
     </div>
-    {{IF [[debug]]}}
+    {{IF [[debug]] && false}}
       <div class="row">
         {{FOREACH deb;[[debug]]}}
           <p>[[deb]]</p>
