added image border

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -39,7 +39,7 @@
         <input type="hidden" name="objectId1" value="[[object1.getId()]]">
         <input type="hidden" name="objectId2" value="[[object2.getId()]]">
 
-        <b>How similar are these two objects?</b><br><br>
+        <b>How similar are these two?</b><br><br>
 
         <div class="row">
           <div class="col s12 m6 l3">
