--- a/templating/templates/media/image.template.html
+++ b/templating/templates/media/image.template.html
@@ -1,1 +1,1 @@
-<img class="responsive-img question-image" src="[[objectSource]]">
+<img class="responsive-img question-image" style="border: 1px solid #000000;" src="[[objectSource]]">
