updated button color

--- a/templating/templates/content/settings.template.html
+++ b/templating/templates/content/settings.template.html
@@ -23,9 +23,11 @@
         </div>
       </div>
       <div class="row">
-        <button class="btn waves-effect waves-light" type="submit">Update
-          <i class="material-icons right">send</i>
-        </button>
+        <div class="col s12">
+          <button class="btn waves-effect waves-light green" type="submit">Update
+            <i class="material-icons right">send</i>
+          </button>
+        </div>
       </div>
     </form>
   </div>
