--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,13 @@ main {
         height: auto !important;
     }
 }
+
+/* label focus color */
+.input-field input[type=text]:focus + label {
+    color: green;
+}
+/* label underline focus color */
+.input-field input[type=text]:focus {
+    border-bottom: 1px solid green;
+    box-shadow: 0 1px 0 0 green;
+}
