--- a/templating/templates/content/admin.template.html
+++ b/templating/templates/content/admin.template.html
@@ -31,7 +31,7 @@
               </div>
             </div>
             <div class="row">
-              <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+              <button class="btn waves-effect waves-light green" type="submit" name="action">Submit
                 <i class="material-icons right">send</i>
               </button>
             </div>
