--- a/css/style.css
+++ b/css/style.css
@@ -170,11 +170,11 @@ main {
 }
 
 /* label focus color */
-.input-field input[type=text]:focus + label {
+.input-field input:focus + label {
     color: green;
 }
 /* label underline focus color */
-.input-field input[type=text]:focus {
+.input-field input:focus {
     border-bottom: 1px solid green;
     box-shadow: 0 1px 0 0 green;
 }
