fixed aligning of button

--- a/templating/templates/content/admin.template.html
+++ b/templating/templates/content/admin.template.html
@@ -31,9 +31,11 @@
               </div>
             </div>
             <div class="row">
-              <button class="btn waves-effect waves-light green" type="submit" name="action">Submit
-                <i class="material-icons right">send</i>
-              </button>
+              <div class="col s12">
+                <button class="btn waves-effect waves-light green" type="submit" name="action">Submit
+                  <i class="material-icons right">send</i>
+                </button>
+              </div>
             </div>
           </form>
         </div>
