fixed for text and password

--- a/css/style.css
+++ b/css/style.css
@@ -170,11 +170,21 @@ main {
 }
 
 /* label focus color */
-.input-field input:focus + label {
+.input-field input[type=text]:focus + label {
     color: green;
 }
 /* label underline focus color */
-.input-field input:focus {
+.input-field input[type=text]:focus {
+    border-bottom: 1px solid green;
+    box-shadow: 0 1px 0 0 green;
+}
+
+/* label focus color */
+.input-field input[type=password]:focus + label {
+    color: green;
+}
+/* label underline focus color */
+.input-field input[type=password]:focus {
     border-bottom: 1px solid green;
     box-shadow: 0 1px 0 0 green;
 }
