--- a/templating/templates/content/queries/new.template.html
+++ b/templating/templates/content/queries/new.template.html
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="file-field input-field">
-        <div class="btn">
+        <div class="btn green">
           <span>Query Data (.zip)</span>
           <input type="file" name="file">
         </div>
@@ -22,9 +22,11 @@
         </div>
       </div>
       <div class="row">
-        <button class="btn waves-effect waves-light" type="submit">Add Query
+        <div class="col s12">
+        <button class="btn waves-effect waves-light green" type="submit">Add Query
           <i class="material-icons right">send</i>
         </button>
+        </div>
       </div>
     </form>
 
