--- a/css/style.css
+++ b/css/style.css
@@ -190,11 +190,6 @@ main {
 }
 
 /* label focus color */
-.input-field select:focus + label {
+ul.dropdown-content.select-dropdown li span {
     color: green;
-}
-/* label underline focus color */
-.input-field select:focus {
-    border-bottom: 1px solid green;
-    box-shadow: 0 1px 0 0 green;
 }
