fixed form button

--- a/templating/templates/content/account.template.html
+++ b/templating/templates/content/account.template.html
@@ -27,9 +27,11 @@
             </div>
           </div>
           <div class="row">
-            <button class="btn waves-effect waves-light" type="submit">Change
-              <i class="material-icons right">send</i>
-            </button>
+            <div class="col s12">
+              <button class="btn waves-effect waves-light green" type="submit">Change
+                <i class="material-icons right">send</i>
+              </button>
+            </div>
           </div>
         </form>
       </div>
