creation of microworker batches possible

--- a/templating/templates/content/microworkers/index.template.html
+++ b/templating/templates/content/microworkers/index.template.html
@@ -4,6 +4,8 @@
   <div class="container">
     <h3>Microworker Batches</h3>
 
+    <a class="btn-floating btn-large waves-effect waves-light green" href="microworkers.php?new=true"><i class="material-icons">add</i></a>
+
     <table class="striped">
       <thead>
         <tr>
