--- a/templating/templates/struct/admin_entries.template.html
+++ b/templating/templates/struct/admin_entries.template.html
@@ -3,6 +3,7 @@
 {{IF [[login.isLoggedin()]]}}
   <li[[menu.isActive('queries')]]><a href="queries.php">Queries</a></li>
   <li[[menu.isActive('mediatypes')]]><a href="mediatypes.php">Mediatypes</a></li>
+  <li[[menu.isActive('microworkers')]]><a href="microworkers.php">Microworkers</a></li>
   <li[[menu.isActive('account')]]><a href="account.php">Account</a></li>
   <li><a href="logout.php">Logout</a></li>
 {{ENDIF}}
