--- a/templating/templates/struct/foot.template.html
+++ b/templating/templates/struct/foot.template.html
@@ -1,5 +1,5 @@
-<footer class="page-footer blue-grey darken-2">
-  <!--<div class="container">
+<!--<footer class="page-footer blue-grey darken-2">
+  <div class="container">
     <div class="row">
       <div class="col l6 s12">
         TODO: write short description here
@@ -17,8 +17,8 @@
         </ul>
       </div>
     </div>
-  </div>-->
-</footer>
+  </div>
+</footer>-->
 
 {{IF [[error]] > 0}}
   <script type="text/javascript">
