--- a/templating/templates/content/microworkers/detail.template.html
+++ b/templating/templates/content/microworkers/detail.template.html
@@ -39,7 +39,7 @@
             <form style="display: inline;" action="microworkers.php?view=[[batch.getId()]]" method="post">
               <input type="hidden" name="action" value="download">
               <input type="hidden" name="batchId" value="[[batch.getId()]]">
-              <button type="submit" class="btn-floating waves-effect waves-light blue">Download</button>
+              <button type="submit" class="btn waves-effect waves-light blue">Download</button>
             </form>
           </td>
         </tr>
