--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -43,7 +43,7 @@
 
         <div class="row">
           <div class="col s12 m6 l3">
-            <button class="btn waves-effect waves-light blue answer-button" name="answer" value="0" type="submit">No Similarity</button>
+            <button class="btn waves-effect waves-light blue answer-button" name="answer" value="0" type="submit">Not Similar</button>
           </div>
           <div class="col s12 m6 l3">
             <button class="btn waves-effect waves-light blue answer-button" name="answer" value="1" type="submit">Slightly Similar</button>
