fixed disclaimer menu hide changed question on comparison

--- a/templating/templates/content/disclaimer.template.html
+++ b/templating/templates/content/disclaimer.template.html
@@ -1,5 +1,7 @@
 {%TEMPLATE->struct/head%}
-{%TEMPLATE->struct/menu%}
+{{IF [[showMenu]]}}
+  {%TEMPLATE->struct/menu%}
+{{ENDIF}}
 <main>
   <div class="container">
     <div class="row">
