--- a/templating/templates/content/queries/index.template.html
+++ b/templating/templates/content/queries/index.template.html
@@ -1,12 +1,12 @@
 {%TEMPLATE->struct/head%}
 {%TEMPLATE->struct/menu%}
 <main>
-  <div class="container">
+  <div id="queryTable" class="container">
     <h3>Queries</h3>
 
     <a class="btn-floating btn-large waves-effect waves-light green" href="queries.php?new=true"><i class="material-icons">add</i></a>
 
-    <table class="striped">
+    <table class="striped tablesorter">
       <thead>
         <tr>
           <th>ID</th>
@@ -36,5 +36,12 @@
 
   </div>
 </main>
+<script type="text/javascript">
+  $(document).ready(function() {
+      $(function () {
+          $("#myTable").tablesorter();
+      });
+  });
+</script>
 
 {%TEMPLATE->struct/foot%}
