--- a/templating/templates/struct/head.template.html
+++ b/templating/templates/struct/head.template.html
@@ -15,6 +15,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/jquery.tablesorter.min.js"></script>
 </head>
 <body>
 
