--- a/templating/templates/content/queries/index.template.html
+++ b/templating/templates/content/queries/index.template.html
@@ -39,7 +39,7 @@
 <script type="text/javascript">
   $(document).ready(function() {
       $(function () {
-          $("#myTable").tablesorter();
+          $("#queryTable").tablesorter();
       });
   });
 </script>
