--- a/templating/templates/struct/head.template.html
+++ b/templating/templates/struct/head.template.html
@@ -16,6 +16,7 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="js/jquery.tablesorter.min.js"></script>
+  <script src="js/jquery.tablesorter.widgets.js"></script>
 </head>
 <body>
 
