--- a/templating/templates/struct/head.template.html
+++ b/templating/templates/struct/head.template.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css?bla=[[rand()]]" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/theme.materialize.css" type="text/css" rel="stylesheet">
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
