--- a/templating/templates/content/queries/index.template.html
+++ b/templating/templates/content/queries/index.template.html
@@ -6,7 +6,7 @@
 
     <a class="btn-floating btn-large waves-effect waves-light green" href="queries.php?new=true"><i class="material-icons">add</i></a>
 
-    <table id="queryTable" class="striped tablesorter">
+    <table id="queryTable" class="striped tablesorter" style="margin-top: 20px;">
       <thead>
         <tr>
           <th>ID</th>
