--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -57,6 +57,15 @@
         </div>
       </form>
     </div>
+    {{IF [[showMenu]]}}
+      <div class="row">
+        <div class="col s12">
+          <div class="progress green">
+            <div class="determinate" style="width: [[progress]]%"></div>
+          </div>
+        </div>
+      </div>
+    {{ENDIF}}
     {{IF [[debug]] && false}}
       <div class="row">
         {{FOREACH deb;[[debug]]}}
