updated progress bar

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -60,8 +60,8 @@
     {{IF [[showMenu]]}}
       <div class="row">
         <div class="col s12">
-          <div class="progress green">
-            <div class="determinate" style="width: [[progress]]%"></div>
+          <div class="progress">
+            <div class="determinate green" style="width: [[progress]]%"></div>
           </div>
         </div>
       </div>
