added source tooltip

--- a/templating/templates/media/image.template.html
+++ b/templating/templates/media/image.template.html
@@ -1,1 +1,1 @@
-<img class="responsive-img question-image z-depth-5" src="[[objectSource]]">
+<img class="responsive-img question-image z-depth-5 tooltipped" data-position="bottom" data-delay="50" data-tooltip="[[object.getVal('source')]]" src="[[object.getVal('data')]]">
