--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -14,7 +14,7 @@
     </div>
     <div class="row valign-wrapper" style="height: 100%;">
       <div class="col m12" style="text-align: center;">
-        {{FOREACH objectSource;[[value1.getVal('objData')]]}}
+        {{FOREACH object;[[value1.getVal('objData')]]}}
           {{IF [[value1.getVal('template')]] == "default"}}
             {%TEMPLATE->media/default%}
           {{ENDIF}}
@@ -23,7 +23,7 @@
           {{ENDIF}}
         {{ENDFOREACH}}
         &nbsp;&nbsp;&nbsp;
-        {{FOREACH objectSource;[[value2.getVal('objData')]]}}
+        {{FOREACH object;[[value2.getVal('objData')]]}}
           {{IF [[value2.getVal('template')]] == "default"}}
             {%TEMPLATE->media/default%}
           {{ENDIF}}
