--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -32,7 +32,8 @@
     </div>
     {{IF ![[oauth.isLoggedin()]]}}
       <div class="row center">
-          <a class="btn-large waves-effect waves-light green" href="login.php?provider=google&refer=game">Login with Google and save my game</a>
+        <a class="btn-large waves-effect waves-light green" href="login.php?provider=google&refer=game">Login with Google and save my game</a>
+        <a class="btn-large waves-effect waves-light blue" href="login.php?provider=facebook&refer=game">Login with Facebook and save my game</a>
       </div>
     {{ENDIF}}
     <div class="row center">
