fixed function call

--- a/templating/templates/content/profile.template.html
+++ b/templating/templates/content/profile.template.html
@@ -2,7 +2,7 @@
 {%TEMPLATE->struct/menu%}
 <main>
   <div class="container">
-    <h3>[[player.getUsername()]]'s Profile</h3>
+    <h3>[[player.getPlayerName()]]'s Profile</h3>
     <div class="row">
       TODO
     </div>
